# locus.ai

./: .gitignore  Makefile  Readme.md  benchmark.ipynb  benchmark_executed.ipynb  main.ipynb  pyproject.toml
scripts/: 01_download_data.py  02_process_go_cc.py  03_process_hpa.py  04_generate_qa_pairs.py  05_merge_and_split.py  validate_data.py
